@@ -4,3 +4,8 @@ Built for the [Council for Resilience Education](https://cre.unl.edu/) at the Un
 Download the [Repast Simphony IDE](https://repast.github.io/repast_simphony.html) to get started with this project.
 
 This project requires Java 8+ to run
+
+Batch runs require appending the following VM argument:
+```
+--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED
+```
